syntax = "proto3";
option java_multiple_files = true;

package it.uniroma1.gRPCExample;

message ListRequest {
    string id = 1;
}

message ListResponse {
    string list = 1;
}

service ListService {
    rpc listOrInfo(ListRequest) returns (ListResponse);
}
